syntax = "proto3";

package models;

option go_package = "github.com/pt-suzuki/grpc_template/src/generate/pb/models/rock_paper_scissors";

import "models/rock_paper_scissors/hand_shapes.proto";
import "models/rock_paper_scissors/result.proto";
import "google/protobuf/timestamp.proto";

message MatchResult {
  HandShapes yourHandShapes = 1;
  HandShapes opponentHandShapes = 2;
  Result result = 3;
  google.protobuf.Timestamp create_time = 4;
  string userId = 5;
}